{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 56,
  "lineage": "13792193-4dbf-ce1a-d977-9c7e9d555410",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/networkInterfaces/hub-nic",
            "internal_domain_name_suffix": "rw3jornymneevphr4rzzauhtkb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub",
                "primary": true,
                "private_ip_address": "10.0.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-FF-5E-F5",
            "name": "hub-nic",
            "private_ip_address": "10.0.0.68",
            "private_ip_addresses": [
              "10.0.0.68"
            ],
            "resource_group_name": "hub-vnet-rg",
            "tags": {
              "environment": "hub"
            },
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Compute/virtualMachines/hub-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-mgmt",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nva-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/networkInterfaces/hub-nva-nic",
            "internal_domain_name_suffix": "rw3jornymneevphr4rzzauhtkb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub-nva",
                "primary": true,
                "private_ip_address": "10.0.0.36",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-98-B0-20",
            "name": "hub-nva-nic",
            "private_ip_address": "10.0.0.36",
            "private_ip_addresses": [
              "10.0.0.36"
            ],
            "resource_group_name": "hub-nva-rg",
            "tags": {
              "environment": "hub-nva"
            },
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Compute/virtualMachines/hub-nva-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-dmz",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "onprem-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkInterfaces/onprem-nic",
            "internal_domain_name_suffix": "dcvssig5fv4ejjsq0h4seg333d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "onprem",
                "primary": true,
                "private_ip_address": "192.168.1.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-pip",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-EC-28-76",
            "name": "onprem-nic",
            "private_ip_address": "192.168.1.132",
            "private_ip_addresses": [
              "192.168.1.132"
            ],
            "resource_group_name": "onprem-vnet-rg",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Compute/virtualMachines/onprem-vm"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke1-nic",
            "internal_domain_name_suffix": "okh4hd5ytcoejfgvo244u0xqfb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke1",
                "primary": true,
                "private_ip_address": "10.1.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-21-CE-40",
            "name": "spoke1-nic",
            "private_ip_address": "10.1.0.68",
            "private_ip_addresses": [
              "10.1.0.68"
            ],
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke1-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.spoke1-mgmt",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke2-nic",
            "internal_domain_name_suffix": "1az3fzm2rceula2wgbqnzdixfa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke2",
                "primary": true,
                "private_ip_address": "10.2.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D7-0E-14",
            "name": "spoke2-nic",
            "private_ip_address": "10.2.0.68",
            "private_ip_addresses": [
              "10.2.0.68"
            ],
            "resource_group_name": "spoke2-vnet-rg",
            "tags": {
              "environment": "spoke2"
            },
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke2-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.spoke2-mgmt",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "onprem-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg",
            "location": "eastus",
            "name": "onprem-nsg",
            "resource_group_name": "onprem-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "onprem"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.204.64",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hub-vpn-gateway1-pip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.179.90.186",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "onprem-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.205.44",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "onprem-vpn-gateway1-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "location": "eastus",
            "name": "hub-gateway-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "toHub",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "location": "eastus",
            "name": "spoke1-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "location": "eastus",
            "name": "spoke2-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
            "name": "dmz",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "onprem-vnet-rg",
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "onprem-vnet-rg",
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "name": "workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke2-vnet-rg",
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "name": "workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke2-vnet-rg",
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mgmt-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_network_security_group.onprem-nsg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "hub-gateway-rt-hub-vnet-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_route_table.hub-gateway-rt",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-mgmt",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-workload",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-mgmt",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-workload",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4597ba8d-63b8-4a48-bcf1-f4739050f351",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "eastus",
            "name": "hub-vnet",
            "resource_group_name": "hub-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.32/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
                "name": "dmz"
              },
              {
                "address_prefix": "10.0.0.64/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.0.255.224/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "environment": "hub-spoke"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "onprem-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2029ab18-2ddf-447c-a650-d1fd221bbdeb",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet",
            "location": "eastus",
            "name": "onprem-vnet",
            "resource_group_name": "onprem-vnet-rg",
            "subnet": [
              {
                "address_prefix": "192.168.1.128/25",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
                "name": "mgmt",
                "security_group": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg"
              },
              {
                "address_prefix": "192.168.255.224/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "environment": "onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8fe38f72-98f8-449c-94d5-773dea6af029",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "eastus",
            "name": "spoke1-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.64/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e5d233d8-889c-4589-8396-3060dc8d1728",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "location": "eastus",
            "name": "spoke2-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.64/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hub-vnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "40.71.204.64"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastus",
            "name": "hub-vpn-gateway1",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "hub-vnet-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "onprem-vpn-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "192.168.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "40.71.205.44"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastus",
            "name": "onprem-vpn-gateway1",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "onprem-vnet-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hub-onprem-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/connections/hub-onprem-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "hub-onprem-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "resource_group_name": "hub-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.onprem-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onprem-hub-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/connections/onprem-hub-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "onprem-hub-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "resource_group_name": "onprem-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.onprem-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke1-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke1-peer",
            "name": "hub-spoke1-peer",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "hub-vnet-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke2-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke2-peer",
            "name": "hub-spoke2-peer",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "resource_group_name": "hub-vnet-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/spoke1-hub-peer",
            "name": "spoke1-hub-peer",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/virtualNetworkPeerings/spoke2-hub-peer",
            "name": "spoke2-hub-peer",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    }
  ]
}